# oop2_project

./: .gitignore  CMakeLists.txt  ClassDiagram.cd  README.md  README.txt  main.cpp  tmp
assets/: CMakeLists.txt  gong.amr  lost.amr  win.amr  winP.amr  winR.amr
dependencies/curl-8.1.2/: CMakeLists.txt
dependencies/curl-8.1.2/docs/cmdline-opts/: CMakeLists.txt
dependencies/curl-8.1.2/docs/libcurl/: CMakeLists.txt
dependencies/curl-8.1.2/lib/: CMakeLists.txt
dependencies/curl-8.1.2/src/: CMakeLists.txt
dependencies/curl-8.1.2/tests/: CMakeLists.txt
dependencies/curl-8.1.2/tests/libtest/: CMakeLists.txt
dependencies/nlohmann/: CMakeLists.txt  README.md  nlohmann_json.natvis
dependencies/nlohmann/docs/docset/: README.md
dependencies/nlohmann/docs/mkdocs/docs/integration/: package_managers.md  pkg-config.md
dependencies/nlohmann/tools/generate_natvis/: generate_natvis.py
include/: AvailableRooms.h  Board.h  CMakeLists.txt  Controller.h  EnemyState.h  EnterNameScreen.h  GameBar.h  Menu.h  PlayerState.h  Referee.h  RoomState.h  UserState.h  WaitingRoom.h  Warrior.h
include/events/: Event.h  EventLoop.h
include/exceptions/: GameException.h  HttpException.h
include/weapons/: Flag.h  Hole.h  Paper.h  Rock.h  Scissors.h  Undefined.h  Weapon.h
models/: PlayerModel.h  RoomModel.h
screens/: CMakeLists.txt
screens/include/: AfterGameScreen.h  AvailableRooms.h  EnterNameScreen.h  ErrorScreen.h  HelpScreen.h  SettingsScreen.h  WaitingRoom.h
screens/src/: AfterGameScreen.cpp  AvailableRooms.cpp  EnterNameScreen.cpp  ErrorScreen.cpp  HelpScreen.cpp  SettingsScreen.cpp  WaitingRoom.cpp
services/: CMakeLists.txt  RoomService.cpp  RoomService.h  UserService.cpp  UserService.h  env.h
src/: AvailableRooms.cpp  Board.cpp  CMakeLists.txt  Controller.cpp  EnemyState.cpp  EnterNameScreen.cpp  GameBar.cpp  Menu.cpp  PlayerState.cpp  Referee.cpp  RoomState.cpp  SettingsScreen.cpp  UserState.cpp  WaitingRoom.cpp  Warrior.cpp  main.cpp
src/events/: CMakeLists.txt  Event.cpp  EventLoop.cpp
src/weapons/: Flag.cpp  Hole.cpp  Paper.cpp  Rock.cpp  Scissors.cpp  Undefined.cpp  Weapon.cpp
stateManagement/include/: EnemyState.h  PlayerState.h  RoomState.h  UserState.h
stateManagement/src/: EnemyState.cpp  PlayerState.cpp  RoomState.cpp  UserState.cpp
utils/: CMakeLists.txt  Consts.h  HttpRequestsManager.cpp  HttpRequestsManager.h  Location.h  ResourcesManager.cpp  ResourcesManager.h  WindowManager.cpp  WindowManager.h
utils/include/: Consts.h  HttpRequestsManager.h  ResourcesManager.h  SettingsManager.h  SoundFlip.h  TextClass.h  TimeCounting.h  WindowManager.h
utils/src/: HttpRequestsManager.cpp  Location.cpp  ResourcesManager.cpp  SettingsManager.cpp  SoundFlip.cpp  TextClass.cpp  TimeCounting.cpp  WindowManager.cpp  factories.cpp
